# spud

./: .gitignore  Cargo.toml  README.md  install-dev.sh  install.sh
docs/: discovery.md  encryption.md  protocol.md
docs/linux/: spud-input-injector.md
protocols/: gtk-shell.xml
resources/: 50-spud-injection.pkla  50-spud-injection.rules  spud.desktop
src/: app.rs  cert.rs  components.rs  config.rs  crypto.rs  discovery.rs  icons.rs  main.rs  net.rs  net.rs.bak  session.rs  theme.rs
src/input/: helper.rs  inject.rs  inject_macos.rs  key_names.rs  macos.rs  macos_keycodes.rs  mod.rs  wayland.rs  x11.rs
src/net/: auth.rs  client.rs  mod.rs  protocol.rs  server.rs  tls.rs
src/views/: client.rs  server.rs
