[package]
name = "spud"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
iced = { version = "0.14", default-features = true, features = ["image"] }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
open = "5"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
raw-window-handle = "0.6"
ashpd = { version = "0.13", default-features = false, features = ["async-io", "global_shortcuts"] }
async-io = "2"
libc = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
