[package]
name = "spud"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
iced = { version = "0.14", default-features = true, features = ["image", "tokio"] }
mdns-sd = "0.11"
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
open = "5"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
dashmap = "6"
postcard = { version = "1.1", features = ["use-std"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["codec"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem"] }
x509-parser = "0.16"
hex = "0.4"
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
raw-window-handle = "0.6"
libc = "0.2"
kinput = "0.3"
evdev = "0.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
